--- a/mtrf.bib
+++ b/mtrf.bib
@@ -546,6 +546,15 @@ DSM
   organization={Association for Computational Linguistics}
 }
 
+@inproceedings{herdagdelen2009bagpack,
+  title={BagPack: A general framework to represent semantic relations},
+  author={Herda{\u{G}}delen, Ama{\c{c}} and Baroni, Marco},
+  booktitle={Proceedings of the Workshop on Geometrical Models of Natural Language Semantics},
+  pages={33--40},
+  year={2009},
+  organization={Association for Computational Linguistics}
+}
+
 @article{pado2009probabilistic,
   title={A probabilistic model of semantic plausibility in sentence processing},
   author={Pad{\'o}, Ulrike and Crocker, Matthew W and Keller, Frank},
