--- a/mtrf.tex
+++ b/mtrf.tex
@@ -72,12 +72,10 @@ Since both raw words and semantic role labels are symbols, it has limited repres
 
 \begin{table}[t]
 \centering
-\begin{tabular}{l|ll}
+\begin{tabular}{lll}
 \textbf{Target Event}    &   \textbf{Foil Event}    &   \textbf{Similarity} \\  \hline
 (machine, run, program)      &   (program, run, machine)     &   0.96    \\
-   \hline
 (mother, supply, baby)   &   (baby, supply, mother)  &   0.95    \\
-  \hline
 (firm, buy, politician)    &   (politician, buy, firm)   &   0.91    \\
 \end{tabular}
 \caption{\label{tab:eventsim} Some examples of similarity scores between two events using event embedding vectors in NNRF model. The metric is cosine similarity. }
@@ -86,7 +84,7 @@ Since both raw words and semantic role labels are symbols, it has limited repres
 \subsection{Main Problem and Previous Work} \label{sec:previous}
 The main problem is that only a few works learn embeddings at the level of events. \citet{tilk2016event} proposed a model to learn a representation of events and their participants. To obtain a probability distribution over \textit{role-fillers} given event information, the models aim to perform \textit{role-filler prediction}: in each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The verbal predicate is considered as a special role $verb$ which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. To reduce the number of parameters, they factored the tensor into three matrices. 
 
-However, there are some limitations in their work. Firstly, there is a problem of \textbf{event embedding similarity}: the event embeddings with same argument words but different roles can be very similar to each other. For example, considering a target event $([_{\texttt{ARG0}} \text{investor}], buy, [_{\texttt{ARG1}}\text{share}])$ and the foil event $([_{\texttt{ARG0}}\text{share}], buy, [_{\texttt{ARG1}}\text{investor}])$, the model shows high similarity score between them. The foil event is unlikely to happen in real world, so human has a low similarity judgement score between it and the target event. But the model has a high similarity judgement score. So in this condition, their model is incompatible with human cognition. This is due to the smoothing effect of distributed representation. Their event embeddings are simply constructed as the sum of role-filler embeddings in each event. For events with a same set of words but different roles, features that characterize the event can be cancelled out during the composition of role-fillers. More examples are shown in Table \ref{tab:eventsim}. 
+However, there are some limitations in their work. Firstly, there is a problem of \textbf{event embeddings similarity}: the event embeddings with same argument words but different roles can be very similar to each other. For example, considering a target event $([_{\texttt{ARG0}} \text{investor}], buy, [_{\texttt{ARG1}}\text{share}])$ and the foil event $([_{\texttt{ARG0}}\text{share}], buy, [_{\texttt{ARG1}}\text{investor}])$, the model shows high similarity score between them. The foil event is unlikely to happen in real world, so human has a low similarity judgement score between it and the target event. But the model has a high similarity judgement score. So in this condition, their model is incompatible with human cognition. This is due to the smoothing effect of distributed representation. Their event embeddings are simply constructed as the sum of role-filler embeddings in each event. For events with a same set of words but different roles, features that characterize the event can be cancelled out during the composition of role-fillers. More examples are shown in Table \ref{tab:eventsim}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:30:35.273Z:
 % 
 % "based" event? ("foil" is pretty clear)
@@ -120,7 +118,7 @@ Furthermore, the factored order-3 tensor structure is not fully explained. Along
 
 
 \subsection{Main Goals} \label{sec:tasks}
-In this paper, we aim to to tackle the event embedding similarity problem and obtain an explainable representation of inner event structure with higher quality. In order to tackle the event embedding similarity problem stated above, we need to train a model to discriminate different roles given same set of words. Besides we want to remain the smoothness of distributed representation of event. For these purposes, we design a training task which is: 
+In this paper, we aim to to tackle the event embeddings similarity problem and obtain an explainable representation of inner event structure with higher quality. In order to tackle the event embeddings similarity problem stated above, we need to train a model to discriminate different roles given same set of words. Besides we want to remain the smoothness of distributed representation of event. For these purposes, we design a training task which is: 
 \begin{itemize}
   \item  \textbf{Semantic role prediction}: in each event, given one target word, and all other words and their semantic role labels, the task is to predict the target semantic role label. 
 \end{itemize}
@@ -135,14 +133,14 @@ It has been shown that priming effect can be found in the directions of both pre
 Although we have three different tasks, multi-task learning is an effective approach to learn a join model to solve them at the same time \citep{caruana1998multitask}. By learning three tasks in parallel with a shared embedding of event predicates and participants, we can obtain a model to achieve our main goals. 
 
 
-\subsection{Key Approaches} \label{sec:approaches}
-We present several multi-task neural network models to solve both predicate prediction, participant prediction and semantic role prediction. To obtain an explainable event level embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word,\ semantic\ role)$. As a result, each word can be represented as a matrix, indexed by a 1-tuple $(word)$, which can be considered as word embedding (see Section \ref{sec:epe}). To handle the curse of dimensionality, we apply tensor factorisation on the event-participant embedding tensor, which represents the tensor with three matrices. After detailed analysis in the tensor space, we demonstrate that these three matrices can be interpreted as word embedding, semantic role embedding and weight of linear mapping correspondingly (see Section \ref{sec:tf}). 
+\subsection{Our Approaches} \label{sec:approaches}
+We present several multi-task neural network models for both predicate prediction, participant prediction and semantic role prediction. To obtain an explainable event level embedding, we define the \textbf{event-participant embedding (EPE)} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word,\ semantic\ role)$. As a result, each word can be represented as a matrix, indexed by a 1-tuple $(word)$, which can be considered as word embedding (see Section \ref{sec:epe}). To handle the curse of dimensionality, we apply tensor factorisation on the event-participant embedding tensor, which represents the tensor with three matrices. After detailed analysis in the tensor space, we demonstrate that these three matrices can be interpreted as word embedding, semantic role embedding and weight of linear mapping correspondingly (see Section \ref{sec:tf}). 
 
-To extract event level information from text and to compare with previous baselines, we use a large scale corpus RW-eng providing access to generalized event knowledge (see Section \ref{sec:corpus}). Using the shared event-participant embedding as input, we add non-linearity layers to the model to construct a multi-task neural network name \textbf{multi-task event predicate-participants (MTEP)} model. We design two classifiers with their own loss functions. One is for predicate prediction and participant prediction. The other one is for semantic role prediction. The models are optimised with different weight of each task (see Section \ref{sec:mtrf}). To improve the composition method and reduce its effect on event embedding similarity problem, we discuss on several possible composition methods. We present an effective method to compose the event-level embedding using features from the hidden layer and design the \textbf{bag-of-predicate-participants (BOP)} model. The new composition method results in better event-participant embedding  (see Section \ref{sec:bop}). To handle the gradient explosion/vanishing problem in the training of factored tensor structure, we integrate the residual learning framework into our model. We add one skip connection inside the factor tensor to construct a residual block (see Section \ref{sec:residual}). This method further improve the performance of the model. 
+To extract event level information from text and to compare with previous baselines, we use a large scale corpus RW-eng providing access to generalized event knowledge (see Section \ref{sec:corpus}). Using the shared event-participant embedding as input, we add non-linearity layers to the model to construct a multi-task neural network. We design two classifiers with their own loss functions. One is for predicate prediction and participant prediction. The other one is for semantic role prediction. The models, named \textbf{multi-task event-participant (MTEP)} model, are optimised with different weight of each task. This model alleviate the event embeddings similarity problem and has better performance on event similarity task (see Section \ref{sec:mtep}). To improve the composition method and reduce its effect on event embeddings similarity problem, we discuss on several possible composition methods. We present an effective method to compose the event-level embedding using features from the hidden layer and design the \textbf{bag-of-predicate-participants (BOP)} model. The new composition method results in a better thematic fit model (see Section \ref{sec:bop}). To handle the gradient explosion/vanishing problem in the training of factored tensor structure, we integrate the residual learning framework into our model. We add one skip connection inside the factor tensor to construct a residual block and design the \textbf{residual bag-of-predicate-participants (ResBOP)} model (see Section \ref{sec:residual}). This method further improve the performance of the model. 
 
 
 \subsection{Experiments and Evaluations} \label{sec:eval-steps}
-We tune hyper-parameters to optimise for different objectives (see Section \ref{sec:exp}). On both three tasks, we compute the perplexity for each model(see Section \ref{sec:wordprediction}, \ref{sec:roleprediction}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on an event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models have significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance on event similarity correlation task. 
+We tune hyper-parameters to optimise for different objectives (see Section \ref{sec:exp}). On both three tasks, we compute the perplexity for each model(see Section \ref{sec:roleprediction}, \ref{sec:wordprediction}). The models are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The event embeddings are evaluated on an event similarity correlation task (see Section \ref{sec:eventsim}). Last but not least, the word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). The results show that our models have significant improvement over the current best system on specific evaluations while has competitive performance on the other evaluations. The event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance on event similarity correlation task. 
 % * <asayeed@mbl.ca> 2017-11-13T22:34:00.165Z:
 % 
 % This is a very thorough high-level overview, but it's easy to get lost.  Maybe put in some subsections or bullet points?
@@ -159,11 +157,12 @@ We tune hyper-parameters to optimise for different objectives (see Section \ref{
 
 
 \subsection{Contribution} \label{sec:contribution}
-Our model is a state-of-the-art system of thematic fit correlation task. The selectional preference features are useful for referent prediction in discourse-level \citep{modi2017modeling}. In simultaneous machine translation between language pairs with different verb position, adding predicate prediction leads to better translations \citep{grissom2014don}. The word embedding we learn can be further employed in discourse relation classification \citep{shi2017need, rutherford2017systematic}, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite embedding of predicate and target head word can be used for argument classification in semantic role labelling \citep{roth2016neural}. 
+From the Cognitive modelling perspective, our models are effective models on both thematic fit modelling and semantic role prediction. The model can be consider as a surprisal model of semantic roles at the event level. The model can also generate a probability distribution over selection preferences given predicate and semantic roles, which can be use to compute event-level word surprisal. 
+
+When it comes to the application perspective, our best model is a state-of-the-art system on several human thematic fit judgement correlation tasks, which can evaluate selectional preferences on predicate-argument pairs. The selectional preference features we obtain are useful for referent prediction in discourse-level \citep{modi2017modeling}. In simultaneous machine translation between language pairs with different verb position, adding predicate prediction leads to better translations \citep{grissom2014don}. The event embedding we learn can be used in scripts learning and paraphrase detection. The composite embedding of predicate and target head word can be used for argument classification in semantic role labelling \citep{roth2016neural}. The word embedding we learn focuses on content words which can be further employed in word sense disambiguation, discourse relation classification \citep{shi2017need, rutherford2017systematic}, sentiment analysis and natural language generation. 
 
 
-
-\newpage
+ 
 \section{Background}
 
 
