--- a/mtrf.tex
+++ b/mtrf.tex
@@ -170,10 +170,10 @@ When it comes to the application perspective, our best model is a state-of-the-a
 \centering
 \begin{tabular}{l|l}
 \textbf{Thematic Role}  &   \textbf{Definition} \\ \hline
-AGENT                   &   The volitional causer of an event \\
-PATIENT (THEME)         &   The participant most directly affected by an event \\
-INSTRUMENT              &   The inanimate force or object used in an event \\
-LOCATION                &   The location or spatial orientation of the event \\
+\texttt{AGENT}                      &   The volitional causer of an event \\
+\texttt{PATIENT} (\texttt{THEME})   &   The participant most directly affected by an event \\
+\texttt{INSTRUMENT}                 &   The inanimate force or object used in an event \\
+\texttt{LOCATION}                   &   The location or spatial orientation of the event \\
 \end{tabular}
 \caption{\label{tab:thematic} Definitions of common thematic roles.}
 \end{table}
@@ -222,17 +222,17 @@ The Proposition Bank (PropBank) is an annotated corpus of semantic roles based o
 \begin{tabular}{l|l} 
 \hline
 \textbf{PropBank Semantic Role}  &   \textbf{Definition} \\ \hline
-Arg0                    &   proto-agent, the argument that most likely to be the agent, \\ 
-                        &   volitional causer or experiencer \\ \hline
-Arg1                    &   proto-patient, the argument that most likely to be the patient \\ \hline
-Arg2                    &   the instrument, benefactive or attribute \\ \hline
-Arg3                    &   the starting point, benefactive or attribute \\ \hline
-Arg4                    &   the ending point \\ \hline
-ArgM-LOC                &   the argument that indicates where the action takes place \\ \hline
-ArgM-MNR                &   the argument that specifies how the action is performed \\ \hline
-ArgM-TMP                &   the argument that shows when an action took place \\ \hline
-ArgM-PNC                &   the argument that shows motivation for some action \\ \hline
-ArgM-CAU                &   the argument that indicates the reason for an action \\ \hline
+\texttt{Arg0}                    &   proto-agent, the argument that most likely to be the agent, \\ 
+                                 &   volitional causer or experiencer \\ \hline
+\texttt{Arg1}                    &   proto-patient, the argument that most likely to be the patient \\ \hline
+\texttt{Arg2}                    &   the instrument, benefactive or attribute \\ \hline
+\texttt{Arg3}                    &   the starting point, benefactive or attribute \\ \hline
+\texttt{Arg4}                    &   the ending point \\ \hline
+\texttt{ArgM-LOC}                &   the argument that indicates where the action takes place \\ \hline
+\texttt{ArgM-MNR}                &   the argument that specifies how the action is performed \\ \hline
+\texttt{ArgM-TMP}                &   the argument that shows when an action took place \\ \hline
+\texttt{ArgM-PNC}                &   the argument that shows motivation for some action \\ \hline
+\texttt{ArgM-CAU}                &   the argument that indicates the reason for an action \\ \hline
 \end{tabular}
 \caption{\label{tab:propbank} Examples of semantic roles in PropBank style.}
 \end{table}
@@ -274,9 +274,9 @@ However, most of these works only assign labels to whole constituents instead of
 \subsection{Distributional Semantic Model} \label{sec:dsm}
 Distributional semantic model (DSM) is a corpus-based method to construct numerical semantic representation. DSM depends on \textit{distributional hypothesis} \citep{harris1954distributional, miller1991contextual} claiming that the semantic similarity between two linguistic units can be measured by the overlap among their contexts. A DSM can be viewed as an order-2 tensor where one dimension is indices of words (or lexical units) and another dimension is features that used to capture context information. Generally, in early work of DSM, a matrix was constructed based on lexical co-occurrences of words in a large corpus. Then each word can be represented by a high-dimensional sparse vector in this matrix. The semantic similarity between two units can be quantified as the similarity of two representation vectors. This, however, does not consider the linguistic information within the context. To include such information, later work encode syntactic relation or lexico-syntactic pattern \citep{pado2007integration, erk2008structured, rothenhausler2009unsupervised} (TODO: performance?). 
 
-\citet{baroni2010distributional} claimed that it is possible to construct a general model for semantic memory, a stable long-term knowledge of human, to tackle different semantic tasks. They proposed \textit{Distributional Memory} (DM) framework which is an order-3 tensor which contains word-relation-word tuple. Performing matricisation on the tensor onto a matrix, vectors from different semantic spaces can be obtained. On tasks of a broad range, their best model, named as TypeDM, obtained competitive performance. This can be interpreted as the advantage of the distributional representation on multiple semantic tasks. Furthermore, the tensor like structure is both flexible and expressive for semantic information modelling. 
+\citet{baroni2010distributional} claimed that it is possible to construct a general model for semantic memory, a stable long-term knowledge of human, to tackle different semantic tasks. They proposed \textit{Distributional Memory} (DM) framework which is an order-3 tensor which contains word-relation-word tuple. Tensor space is constructed on a count space of those tuples from large-scale corpus. The weights in the tensor space is smoothed by local mutual information (LMI). Performing matricisation on the tensor onto a matrix, vectors from different semantic spaces can be obtained. The model is constructed on a mixed corpus, named \textbf{UBW} in this paper, containing ukWac  \citep{ferraresi2008introducing}, BNC \citep{british2007british} and Wikipedia. On tasks of a broad range, their best model, named as TypeDM, obtained competitive performance. This can be interpreted as the advantage of the distributional representation on multiple semantic tasks. Furthermore, the tensor like structure is both flexible and expressive for semantic information modelling. 
 
-In addition to syntactic information, \citet{sayeed2014combining} extracts shallow semantic representation using semantic role labeller SENNA and constructs DM upon them. Combining syntactic and semantic features, they build a fully unsupervised distributional memory model, named as SDDM, especially for thematic fit judgement task. SDDM outperforms syntax-based thematic fit model by a large margin, which indicates that semantic information is essential in the thematic fit task. 
+In addition to syntactic information, \citet{sayeed2014combining} extracts shallow semantic representation using semantic role labeller SENNA and constructs DM upon them. Combining syntactic and semantic features, they build a fully unsupervised distributional memory model, named as SDDM, especially for thematic fit judgement task. SDDM outperforms syntax-based thematic fit model by a large margin, which indicates that semantic information is essential in the thematic fit task. To improve the performance of DM on thematic fit task, \citet{greenberg2015improving} employed clustering on candidate role-fillers to construct a better representation for prototypical role-filler. \citet{santus2017measuring} proposed a feature selection method which extract the most significant \textit{second order contexts} for each role of each verb and compute thematic fit score as a weighted overlap between the top features of role-fillers and prototype role-filler. 
 
 There are three major drawbacks of the distributional semantic model. Firstly when it comes to practice, the semantic space of DSM is high-dimensional and sparse. When someone wants to induce on complex events with a large number of participants, the size of representation becomes enormous. It is time or space consuming to use this kind of representation in practice. In addition, the parameters of the vectors are discrete in count-based vector space. Although many alternative weighting functions and smoothing techniques have been proposed, it is hard to decide which is the most optimised. Last but not least, these models usually suffer the curse of dimensionality. Because the Euclidean distance between two vectors is meaningless in high-dimensional space, when the representation vectors are used as input of distance-based algorithms like nearest-neighbour classifier or clustering, the result can be unexpected. Thus we need a better representation model in this paper. 
 % * <asayeed@mbl.ca> 2017-11-13T22:43:00.518Z:
@@ -293,11 +293,11 @@ There are three major drawbacks of the distributional semantic model. Firstly wh
 \subsection{Distributed Representation} \label{sec:repr}
 Distributed representation, pioneered by \citet{hinton1986learning}, is an effective method to handle sparsity and curse of dimensionality in symbolic representation. In general symbolic representation like \textit{one-hot representation}, where one binary value is $1$ and the others are $0$ in representation vectors, the binary values are mutual exclusive. If each representation vector has $n$ features, it can only represent $n$ different states of the entry. In distributed representation, $n$ feature with $k$ possible values can describe $k^n$ different states \citep{Goodfellow-et-al-2016}. This is why distributed representation is powerful. 
 
-The distributed representation of words, popularly known as word embedding, can be learnt in the training of \textit{neural net language model} \citep{bengio2003neural}. Most of the early works aimed to solve language modelling which is the task to predict the target word given its context. Unlike DSMs or other count-based semantic models, the parameters in distributed representation vectors are learnt during the training of neural net language models. Later these models were further improved by making use of sequential information in the previous context of target words. This can be done by adding recurrent units to hidden layers of neural net language model \citep{mikolov2010recurrent}. To learn high quality word embeddings with million words in the vocabulary from a billion scale of text, \citet{mikolov2013efficient} proposed two models, \textit{CBOW} and \textit{Skip-gram}, based on logistic regression. Context is the words around the target word in both models. In CBOW model, context representation is the sum of word embedding vectors of the words in the context. In Skip-gram model, the target word is used to predict the words in the context. The system they built, famously known as \textit{word2vec}, obtained competitive performance against more complex neural networks on syntactic and semantic relation tasks. To tackle multiple tasks in natural language processing, \citet{collobert2011natural} proposed a model which shares the word embedding across tasks of language modelling, part-of-speech tagging, chunking, named entity recognition, semantic role labelling. 
+The distributed representation of words, popularly known as word embedding, can be learnt in the training of \textit{neural net language model} \citep{bengio2003neural}. Most of the early works aimed to solve language modelling which is the task to predict the target word given its context. Unlike DSMs or other count-based semantic models, the parameters in distributed representation vectors are learnt during the training of neural net language models. Later these models were further improved by making use of sequential information in the previous context of target words. This can be done by adding recurrent units to hidden layers of neural net language model \citep{mikolov2010recurrent}. To learn high quality word embeddings with million words in the vocabulary from a billion scale of text, \citet{mikolov2013efficient} proposed two models, \textit{CBOW} and \textit{Skip-gram}, based on logistic regression. Context is the words around the target word in both models. In CBOW model, context representation is the sum of word embedding vectors of the words in the context. In Skip-gram model, the target word is used to predict the words in the context. The system they built, famously known as \textit{word2vec}, obtained competitive performance against more complex neural networks on syntactic and semantic relation tasks. 
 
 
 
-\newpage
+ 
 \section{Representation of Predicates and Participants}
 We intend to learn meaningful representation of event structure in semantic space. Thus we define a semantic role model for this paper. We join PropBank semantic roles and the special role \texttt{PRD} together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:45:29.318Z:
